# northwestern-msai-foundry-agent-tool-extension

./: .env.example  .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  READMEGC.md  copilot-instructions.md  pull_request_template.md
.github/skills/agentic-ai/: SKILL.md
.github/skills/azure-functions/: SKILL.md
.github/skills/mcp-server/: SKILL.md
.github/skills/notebook-development/: SKILL.md
.github/skills/python-testing/: SKILL.md
.github/workflows/: ci.yml
docs/: architecture.md  asigments.md  copilot_workflow.md  foundry_setup.md  functions_setup.md  logic_apps_setup.md  quickstart.md  rationale.md  single_agent_architecture.md
docs/logic_app_payloads/: request_schema.json  response_schema.json  sample_request.json  sample_response.json
functions/: function_app.py  requirements.txt
infra/: README.md  main.bicep  parameters.json
notebooks/: 01_create_agent.ipynb  02_function_tool_1.ipynb  03_function_tool_2.ipynb  04_logic_app_integration.ipynb  README.md  lab1_azure_functions.ipynb  lab2_logic_apps.ipynb  lab3_complete_agent.ipynb  lab3_single_agent_tool_calling.ipynb  lab4_mcp_server_azure_functions.ipynb  lab5_single_agent_mcp_integration.ipynb  lab6_multi_agent_orchestration.ipynb
src/: __init__.py  agent_core.py
src/abstractions/: __init__.py  azure_functions.py  logic_apps.py
src/northwestern_foundry_agent/: __init__.py
src/northwestern_foundry_agent/config/: __init__.py  settings.py
src/northwestern_foundry_agent/foundry/: __init__.py  agent.py  tools.py
src/northwestern_foundry_agent/integrations/: __init__.py
src/northwestern_foundry_agent/integrations/azure_functions/: __init__.py  client.py  models.py
src/northwestern_foundry_agent/integrations/logic_apps/: __init__.py  client.py  models.py
src/northwestern_foundry_agent/utils/: __init__.py  errors.py  logging.py  retry.py  validation.py
src/tool_registry/: __init__.py
src/tool_registry/mcps/: .env.sample
src/tool_registry/mcps/src/: function_app.py
tests/: __init__.py  conftest.py  test_azure_functions.py  test_config.py  test_foundry_tools.py  test_logic_apps.py  test_utils.py
