[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "northwestern-foundry-agent"
version = "0.1.0"
description = "Azure AI Foundry Agent Integrations for Northwestern MSAI"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Pablo Salvador Lopez", email = "contact@example.com" }
]
keywords = ["azure", "ai", "foundry", "agent", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "azure-ai-projects>=1.0.0b1",
    "azure-identity>=1.15.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.1.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.2.0",
    "types-requests>=2.31.0",
]
notebooks = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "nbformat>=5.9.0",
]
all = [
    "northwestern-foundry-agent[dev,notebooks]",
]

[project.urls]
Homepage = "https://github.com/pablosalvador10/northwestern-msai-foundry-agent-extension"
Documentation = "https://github.com/pablosalvador10/northwestern-msai-foundry-agent-extension#readme"
Repository = "https://github.com/pablosalvador10/northwestern-msai-foundry-agent-extension"
Issues = "https://github.com/pablosalvador10/northwestern-msai-foundry-agent-extension/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/northwestern_foundry_agent"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value in comparison
    "PLC0415",  # Import should be at top-level (we use lazy imports intentionally)
    "TC001",    # Move into type-checking block (sometimes not appropriate)
    "TC003",    # Move standard library import into type-checking block
]

[tool.ruff.lint.isort]
known-first-party = ["northwestern_foundry_agent"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/northwestern_foundry_agent"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
